--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/makinacorpus/angular2-schema-form"
+    "url": "git+https://bitbucket.org/nayar/angular2-schema-form"
   },
   "keywords": [
     "angularjs",
